✨  Add endpoint to retrieve share with token
