# openapi.yaml
@@ -181,9 +181,9 @@ paths:
         - adminToken: []
       # parameters:
       #   - name: id
-      #     in: path
-      #     required: true
-      #     description: The id of the group to get the share token for
+      #     in: query
+      #     required: false
+      #     description: The id of the share token to get
       #     schema:
       #       type: string
       #       format: uuid
@@ -207,10 +207,6 @@ paths:
                           description: The id of the share token
                           type: string
                           format: uuid
-                        token:
-                          description: The share token that can be used to access the group
-                          type: string
-                          format: JWT
                         expiration:
                           description: The ISO 8601 date and time when the share token expires
                           type: string
@@ -242,6 +238,55 @@ paths:
       responses:
         "204":
           description: Share token deleted
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Share token not found
+        "500":
+          description: Internal server error
+  /share/:id:
+    get:
+      tags:
+        - share
+      summary: Get share token by id
+      security:
+        - adminToken: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the share token to get
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Share token found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  admin:
+                    description: If true, the share token can be used to create a new admin session
+                    type: boolean
+                  id:
+                    description: The id of the share token
+                    type: string
+                    format: uuid
+                  token:
+                    description: The share token that can be used to access the group
+                    type: string
+                    format: JWT
+                  expiration:
+                    description: The ISO 8601 date and time when the share token expires
+                    type: string
+                    format: date-time
+
         "400":
           description: Invalid input
         "401":
