# src/models/share.ts
@@ -4,6 +4,19 @@ import { Share } from "../entity/Share";
 import APIError from "../utils/apiError";
 import { logger } from "../utils/logger";
 import { CreateShareTokenQueryType } from "../validators/share";
+import * as jwt from "jsonwebtoken";
+import { environment } from "../utils/environment";
+import { ShareTokenJWT } from "../types";
+
+function generateTokenForShare(share: Share): string {
+    const shareTokenContent: ShareTokenJWT = {
+        groupId: share.group.id,
+        server: environment.externalUrl,
+        tokenId: share.id
+    }
+
+    return jwt.sign(shareTokenContent, environment.jwtSecret);
+}
 
 export async function createShareToken(groupId: string, query: CreateShareTokenQueryType): Promise<[Share, string]> {
     logger.debug(`Creating share token for group ${groupId}`);
@@ -21,11 +34,11 @@ export async function createShareToken(groupId: string, query: CreateShareTokenQ
         throw APIError.badRequest("Group not found");
     }
 
-    const [share, token] = Share.factory(group, query.admin, query.maxSessions);
+    const share = Share.factory(group, query.admin, query.maxSessions);
 
     await shareTokenRepository.save(share);
 
-    return [share, token];
+    return [share, generateTokenForShare(share)];
 }
 
 export async function getShareTokens(groupId: string): Promise<Share[]> {
@@ -34,13 +47,35 @@ export async function getShareTokens(groupId: string): Promise<Share[]> {
     const shareTokenRepository = AppDataSource.getRepository(Share);
 
     return await shareTokenRepository.find({
-        relations: ["sessions"],
+        relations: ["sessions", "group"],
         where: {
             group: {
                 id: groupId
             }
         }
     });
+}
+
+export async function getShareWithToken(id: string, groupId: string): Promise<[Share, string]> {
+    logger.debug(`Getting share token with id ${id}`);
+
+    const shareTokenRepository = AppDataSource.getRepository(Share);
+
+    const shareToken = await shareTokenRepository.findOne({
+        relations: ["sessions", "group"],
+        where: {
+            id,
+            group: {
+                id: groupId
+            }
+        }
+    });
+
+    if (!shareToken) {
+        throw APIError.notFound();
+    }
+
+    return [shareToken, generateTokenForShare(shareToken)];
 }
 
 export async function deactivateShareToken(id: string, groupId: string): Promise<void> {
